removed all but the ekitabu branding

--- a/src/chrome-app/index.html
+++ b/src/chrome-app/index.html
@@ -22,12 +22,8 @@
         <div id="splashScreen">
             <div id="splashScreenFade" >
                 <div id="logos">
-                    <div class="logoTop"><img src="/images/kenyaShield.png"></div>
+                    <div class="logoTop"><img src="/images/ekitabuLogoLg.png"></div>
                     <a id="closeSplash" style="font-family: Arial; position: relative; top: 55%" href="#">Get Started</a>
-                    <div class="logo" style="margin-right: 0%"><img src="/images/bentechLogo.png"></div>
-                    <div class="logo"><img src="/images/dddLogoTransparency.png"></div>
-                    <div class="logo"><img src="/images/ekitabuLogoLg.png"></div>
-                    <div class="logo" style="margin-left: 1%; margin-right: 0%"><img src="/images/kenyaPublishersLogo.png"></div>
                 </div>
             </div>
         </div>
